# firebase-php

./: .php-cs-fixer.dist.php  .readthedocs.yaml  CHANGELOG.md  README.md  composer.json  lychee.toml  phpstan.neon.dist  phpunit.xml.dist  rector.php
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: dependabot-auto-merge.yml  docs.yml  emulator-tests.yml  integration-tests.yml  static-analysis.yml  tests.yml
docs/: app-check.rst  authentication.rst  cloud-firestore.rst  cloud-messaging.rst  cloud-storage.rst  conf.py  dynamic-links.rst  index.rst  overview.rst  pyproject.toml  realtime-database.rst  remote-config.rst  setup.rst  troubleshooting.rst  user-management.rst
docs/_static/: custom.css
src/Firebase/: Auth.php  Factory.php  Firestore.php  ServiceAccount.php
src/Firebase/AppCheck/: AppCheckTokenGenerator.php
src/Firebase/Auth/: ApiClient.php
src/Firebase/Exception/: MessagingApiExceptionConverter.php
src/Firebase/Messaging/: AndroidConfig.php  ApnsConfig.php  MessageData.php
src/Firebase/Valinor/: Source.php
tests/: .env.dist  IntegrationTestCase.php
tests/Integration/: AuthTestCase.php  DynamicLinksTest.php  FactoryTest.php  HttpLoggingTest.php  MessagingTest.php  RemoteConfigTest.php  ServiceAccountTest.php  TenantAwareAuthTest.php
tests/Integration/Auth/: CustomTokenViaGoogleCredentialsTest.php  UserQueryTest.php
tests/Integration/Database/: AuthVariableOverrideTest.php  QueryTest.php  ReferenceTest.php  TransactionTest.php
tests/Unit/: DatabaseTest.php  DynamicLinksTest.php  FactoryTest.php  ServiceAccountTest.php
(+39 files in other folders)
